--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -62,7 +62,7 @@
                                 <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
                                 {% if free_delivery_delta > 0 %}
                                     <p class="mb-1 text-danger">
-                                        Your only <strong>${{ free_delivery_delta }}</strong>$ away from free delivery!
+                                        Your only <strong>${{ free_delivery_delta }}</strong> away from free delivery!
                                     </p>
                                 {% endif %}
                             </td>
