--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -47,13 +47,30 @@
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group">
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        <button class="decrement-qty btn btn-black rounded-0" 
+                                            data-item_id="{{ wine.id }}" id="decrement-qty_{{ wine.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-minus"></i>
+                                            </span>
+                                        </button>
+                                
+                                        <input class="form-control qty_input" type="number" 
+                                            name="quantity" value="1" min="1" max="99" 
+                                            data-item_id="{{ wine.id }}" id="id_qty_{{ wine.id }}">
+                                
+                                        <button class="increment-qty btn btn-black rounded-0"
+                                            data-item_id="{{ wine.id }}" id="increment-qty_{{ wine.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-plus"></i>
+                                            </span>
+                                        </button>
                                     </div>
                                 </div>
+                                
                             </div>
 
                             <div class="col-12">
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-primary rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
@@ -130,8 +147,6 @@
                     <p>Be the first to leave a comment</p>
                 {% endif %}
                 {% for review in reviews %}
-
-
                     <div class="review-card mb-3 {% if not review.approved and review.user == user %} faded {% elif not review.approved %} d-none {% endif %}">
                         <div class="card-body">
                             <p class="font-weight-bold">
@@ -155,7 +170,7 @@
 
 
 
-            <!-- not done yet 11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111 -->
+    <!-- not done yet -->
     <!-- Create a review form in forms.py to allow user to add a comment and rating -->
             <!-- Leave a Comment and Rating Form -->
             <div class="col-md-4 d-flex flex-column">
@@ -203,7 +218,6 @@
                                         </form>
                                     </div>
                                     
-
                                     <div class="mt-2">
                                         <p>Your rating: <span id="user-rating">{{ user_rating }}</span></p>
                                     </div>
@@ -218,16 +232,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
 
 <!-- Delete Confirmation Modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" 
@@ -252,22 +256,10 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
+{% endblock %}
+
+{% block extra_js %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
