Add quantity boxes to shopping bag template

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,6 +22,12 @@ nav {
     align-items: center; 
 }
 
+/* Button styling */
+.btt-link,
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
 
 /* Wine Banner Styling */
 .wine-banner {
