--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -48,8 +48,36 @@
                                     <p class="my-0">${{ item.wine.price }}</p>
                                 </td>
                                 <td class="py-3 w-25">
-                                    <p class="my-0">{{ item.quantity }}</p>
+
+                                    <form class="form update-form" method="POST" action="">
+                                        {% csrf_token %}
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <button class="decrement-qty btn fa-sm rounded-0" 
+                                                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-minus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                        
+                                                <input class="form-control form-control-sm qty_input" type="number" 
+                                                    name="quantity" value="{{ item.quantity }}" min="1" max="99" 
+                                                    data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                        
+                                                <button class="increment-qty btn rounded-0"
+                                                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-plus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <div class="qty-form-buttons d-flex">
+                                    <a class="update-link text-info"><small>Update</small></a>
+                                    <a class="remove-item text-danger ms-auto" id="remove_{{ item.item_id }}"><small>Remove</small></a>                
                                 </td>
+
                                 <td class="py-3">
                                     <p class="my-0">${{ item.wine.price }}</p>
                                 </td>
@@ -97,4 +125,31 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input_script.html' %}
+
+    <script type="text/javascript">
+        // Update quantity on click
+        $('.update-link').click(function(e) {
+            var form = $(this).prev('.update-form');
+            form.submit();
+        });
+    
+        // Remove item and reload on click
+        $('.remove-item').click(function(e) {
+            var csrfToken = "{{ csrf_token }}";
+            var itemId = $(this).attr('id').split('remove_')[1];
+            var url = `/bag/remove/${itemId}`;
+            var data = {'csrfmiddlewaretoken': csrfToken};
+    
+            $.post(url, data)
+             .done(function() {
+                 location.reload();
+             });
+        });
+    </script>
+    
 {% endblock %}
