--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -49,7 +50,7 @@
                                 </td>
                                 <td class="py-3 w-25">
 
-                                    <form class="form update-form" method="POST" action="">
+                                    <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <div class="input-group">
@@ -79,7 +80,7 @@
                                 </td>
 
                                 <td class="py-3">
-                                    <p class="my-0">${{ item.wine.price }}</p>
+                                    <p class="my-0">${{ item.wine.price | calc_subtotal:item.quantity }}</p>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -132,23 +133,26 @@
     {% include 'products/includes/quantity_input_script.html' %}
 
     <script type="text/javascript">
-        // Update quantity on click
-        $('.update-link').click(function(e) {
-            var form = $(this).prev('.update-form');
-            form.submit();
-        });
+        $(document).ready(function() {
+            // Update quantity on clicking the 'Update' link
+            $('.update-link').click(function(e) {
+                e.preventDefault(); 
+                var form = $(this).closest('td').find('.update-form');
+                form.submit();
+            });
     
-        // Remove item and reload on click
-        $('.remove-item').click(function(e) {
-            var csrfToken = "{{ csrf_token }}";
-            var itemId = $(this).attr('id').split('remove_')[1];
-            var url = `/bag/remove/${itemId}`;
-            var data = {'csrfmiddlewaretoken': csrfToken};
-    
-            $.post(url, data)
-             .done(function() {
-                 location.reload();
-             });
+            // Remove item and reload on click
+            $('.remove-item').click(function(e) {
+                var csrfToken = "{{ csrf_token }}";
+                var itemId = $(this).attr('id').split('remove_')[1];
+                var url = `/bag/remove/${itemId}/`;
+                var data = {'csrfmiddlewaretoken': csrfToken};
+
+                $.post(url, data)
+                .done(function() {
+                    location.reload();
+                });
+            })
         });
     </script>
     
