Add toast templates and functionality to base template

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,6 +29,24 @@ nav {
     cursor: pointer;
 }
 
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
+
 /* Wine Banner Styling */
 .wine-banner {
     padding: 4rem 1rem;
