--- a/templates/base.html
+++ b/templates/base.html
@@ -109,18 +109,19 @@
     {% endblock %}
 
     <!-- displaying Django messages -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                {% for message in messages %}
-                <div class="alert {{ message.tags }} alert-dismissible
-                fade show" id="msg" role="alert">
-                {{ message | safe }}
-                <button type="button" class="btn-close"
-                    data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                {% endfor %}
-            </div>
+    <div aria-live="polite" aria-atomic="true" style="position: fixed; top: 70px; right: 20px; z-index: 1080;">
+        <div class="toast-container">
+            {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    {% include 'includes/toasts/toast_error.html' with message=message %}
+                {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+                    {% include 'includes/toasts/toast_warning.html' with message=message %}
+                {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                    {% include 'includes/toasts/toast_success.html' with message=message %}
+                {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                    {% include 'includes/toasts/toast_info.html' with message=message %}
+                {% endif %}
+            {% endfor %}
         </div>
     </div>
 
@@ -191,6 +192,12 @@
     {% endblock %}
 
     {% block extra_js %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.toast').toast('show');
+        });
+    </script>
+    
     {% endblock %}
 
 </body>
