--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -104,7 +104,7 @@
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <a href="{{ product_list_url }}" class="btn btn-black rounded-0 btn-lg">
+                                <a href="{{ checkout_url }}" class="btn btn-black rounded-0 btn-lg">
                                     <span class="text-uppercase">Secure Checkout</span>
                                     <span class="icon">
                                         <i class="fas fa-lock"></i>
