Remove county field from admin and form files

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 {% url 'product_list' as product_list_url %}
 {% url 'product_details' as product_details_url %}
 {% url 'view_bag' as bag_url %}
+{% url 'checkout' as checkout_url %}
 
 
 <!DOCTYPE html>
