--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 {% url 'product_details' as product_details_url %}
 {% url 'view_bag' as bag_url %}
 {% url 'checkout' as checkout_url %}
+{% url 'access_denied' as access_denied_url %}
 
 
 <!DOCTYPE html>
@@ -41,7 +42,7 @@
 <body class="d-flex flex-column min-vh-100">
     <header>
         <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark" id="main-navbar">
             <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">
                 Crimson Vine Cellars
             </a>
